--- a/src/content/docs/infrastructure/infrastructure-ui-pages/infrastructure-ui/infrastructure-hosts-page.mdx
+++ b/src/content/docs/infrastructure/infrastructure-ui-pages/infrastructure-ui/infrastructure-hosts-page.mdx
@@ -78,7 +78,7 @@ Here are some of the things you can do from the **System** tab:
       </td>
 
       <td>
-        Use [filter sets](/docs/infrastructure-organize-your-resources-scopes) to show only hosts matching certain criteria, or use [group by](/docs/infrastructure-group-results-specific-attributes) to aggregate the results.
+        Use [filter sets](/docs/infrastructure-organize-your-resources-scopes) to show only hosts matching certain criteria, or use [group by](/docs/infrastructure-group-results-specific-attributes) to aggregate the results. Filter sets support filter by host and filter by disk (device).
       </td>
     </tr>
 
